[project]
name = "number-sents"
version = "0.1.0"
description = "Number sentences in text"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "streamlit>=1.40.2",
    "spacy>=3.8.2",
    "en-core-web-sm>=3.8.0",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
